    ADDED: pressing CTRL+RETURN when media menu is open (un)mounts the highlighted device
    ADDED: action: Bring Main Window to Top (global shortcut possible)
    ADDED: option: General > Viewer/Editor > Viewer > Use Okteta As Hex Viewer
           (default: on)
    ADDED: option: Archives > krarc > Enable Write Support
    ADDED: splitter option: Overwrite files without confirmation
    ADDED: action: Go to Other Panel's Directory - shortcut: CTRL+=

    CHANGED: krarc write support is disabled by default
    CHANGED: user action manager starts with the "Basic Properties" tab active
    CHANGED: detailed view: "Automatically Resize Columns" setting is remembered

    FIXED: pressing the context menu key when the media menu is shown
           opens the context menu for a random item instead of the current
    FIXED: [ 300514 ] no warning if terminal emulator can't be created
    FIXED: [ 303209 ] passwords for remote connections are stored in config
    FIXED: [ 280946 ] viewer: incorrect tab's file names when moving tabs
    FIXED: user actions: "run in the embedded terminal emulator" setting is not saved
    FIXED: mountman: mount list is not refreshed if /etc/mtab is a symlink to /proc/mounts
    FIXED: [ 148866 ] create new directory: spaces are stripped out
    FIXED: [ 305069 ] list panel is not autoscrolled to the cursor (in brief view)
    FIXED: [ 173690 ] file ACLs are not displayed correctly in properties dialog
           - thanks to Eugeny Shkrigunov
    FIXED: It is impossible to select a non-default folder in the search dialog
    FIXED: splitter overwrites files without confirmation
    FIXED: [ 274483 ] crash when selecting items from popup-menu
    FIXED: [ 285778 ] View or edit files doesn't work
    FIXED: viewer tries to load obsolete libkhexedit2 part as hex viewer -
           use okteta part instead
    FIXED: crash when trying to view files with embedded KOrganizer part
           (avoids KOrganizer bug 205713)