@@ -1,3 +1,7 @@
+    ADDED: options: Panel > Media Menu > 
+                Show Mount Path
+                Show File Sytem Type
+                Show Size (Always | When Device has no Label | Never)
     ADDED: pressing CTRL+RETURN when media menu is open (un)mounts the highlighted device
     ADDED: action: Bring Main Window to Top (global shortcut possible)
     ADDED: option: General > Viewer/Editor > Viewer > Use Okteta As Hex Viewer
